force-app/main/default/objects/CampaignIndicator__c/CampaignIndicator__c.object-meta.xml
<CustomObject>
    <description>[a0s][CampaignIndicator__c] Indicador utilizado na campanha para apuração e base de cálculo do benefício a ser pago</description>
    <label>Indicador de Campanha</label>
    <nameField>
        <displayFormat>CCR-{YYYY}{00000}</displayFormat>
        <label>Código do Indicador de Campanha</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicadores de Campanha</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>