force-app/main/default/objects/CampaignIndicator__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <formula>&quot;SELECT &quot; &amp;  GroupBy__c &amp; &quot;, &quot; &amp; GroupedField__c &amp; &quot; FROM &quot; &amp; Table__c &amp; &quot; WHERE &quot; &amp; Filter__c &amp; IF( ISBLANK(Filter__c) , &quot; &quot;, &quot; AND &quot;) &amp; DateField__c &amp; &quot; &gt;= {0} &quot; &amp; &quot; AND &quot; &amp; DateField__c &amp; &quot; &lt;= {1} &quot; &amp; &quot; GROUP BY &quot; &amp; GroupBy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Critério</label>
    <type>Text</type>
</CustomField>