force-app/main/default/objects/CampaignIndicator__c/fields/CriteriaOld__c.field-meta.xml
<CustomField>
    <fullName>CriteriaOld__c</fullName>
    <label>Critério</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>