force-app/main/default/objects/CampaignIndicator__c/fields/DateField__c.field-meta.xml
<CustomField>
    <fullName>DateField__c</fullName>
    <label>Campo Data</label>
    <length>100</length>
    <type>Text</type>
</CustomField>