force-app/main/default/objects/CampaignIndicator__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filtro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>