force-app/main/default/objects/CampaignIndicator__c/fields/GroupBy__c.field-meta.xml
<CustomField>
    <fullName>GroupBy__c</fullName>
    <label>Agrupar por</label>
    <length>100</length>
    <type>Text</type>
</CustomField>