force-app/main/default/objects/CampaignIndicator__c/fields/GroupedField__c.field-meta.xml
<CustomField>
    <fullName>GroupedField__c</fullName>
    <label>Campo Agrupamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>