force-app/main/default/objects/CampaignIndicator__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Tabela</label>
    <length>50</length>
    <type>Text</type>
</CustomField>